--- a/tools/jsonpath-tool.html
+++ b/tools/jsonpath-tool.html
@@ -85,42 +85,37 @@ section .cm-lineWrapping {
 
     import { JSONPath } from '../src/js/jsonpath.js';
 
-    let aLastText = `{
-  "store": {
-    "book": [
-      {
-        "category": "reference",
-        "author": "Nigel Rees",
-        "title": "Sayings of the Century",
-        "price": 8.95
-      },
-      {
-        "category": "fiction",
-        "author": "Evelyn Waugh",
-        "title": "Sword of Honour",
-        "price": 12.99
-      },
-      {
-        "category": "fiction",
-        "author": "Herman Melville",
-        "title": "Moby Dick",
-        "isbn": "0-553-21311-3",
-        "price": 8.99
-      },
-      {
-        "category": "fiction",
-        "author": "J. R. R. Tolkien",
-        "title": "The Lord of the Rings",
-        "isbn": "0-395-19395-8",
-        "price": 22.99
+    let aLastText = JSON.stringify({
+      store: {
+        book: [ {
+            category: "reference",
+            author: "Nigel Rees",
+            title: "Sayings of the Century",
+            price: 8.95
+          }, {
+            category: "fiction",
+            author: "Evelyn Waugh",
+            title: "Sword of Honour",
+            price: 12.99
+          }, {
+            category: "fiction",
+            author: "Herman Melville",
+            title: "Moby Dick",
+            isbn: "0-553-21311-3",
+            price: 8.99
+          }, {
+            category: "fiction",
+            author: "J. R. R. Tolkien",
+            title: "The Lord of the Rings",
+            isbn: "0-395-19395-8",
+            price: 22.99
+        } ],
+        bicycle: {
+          color: "red",
+          price: 19.95
+        }
       }
-    ],
-    "bicycle": {
-      "color": "red",
-      "price": 19.95
-    }
-  }
-}`;
+    }, null, 2);
 
     function readJSON() {
         const textarea = document.querySelector('#jsondata-in');
