[mv3] Add access to troubleshooting info in About pane

--- a/platform/mv3/extension/dashboard.html
+++ b/platform/mv3/extension/dashboard.html
@@ -140,6 +140,10 @@
                 <div class="li"><span><a href="https://flagpedia.net/" target="_blank">Flags of the World</a> by <a href="https://www.davidkrmela.com/">David Krmela</a></span></div>
                 <div class="li"><span><a href="https://codemirror.net/" target="_blank">CodeMirror 6</a> by <a href="https://github.com/marijnh">Marijn Haverbeke</a></span></div>
             </div>
+            <hr>
+            <details><summary data-i18n="supportS5H"></summary>
+            <pre style="user-select: all; -webkit-user-select: all;"></pre>
+            </details>
         </div>
     </section>
     <!-- -------- -->
