--- a/platform/mv3/extension/report.html
+++ b/platform/mv3/extension/report.html
@@ -55,7 +55,7 @@
 <div>
     <hr>
     <details><summary data-i18n="supportS5H"></summary>
-    <pre style="user-select: all;"></pre>
+    <pre style="user-select: all; -webkit-user-select: all;"></pre>
     </details>
 </div>
 
