--- a/platform/mv3/extension/zapper-ui.html
+++ b/platform/mv3/extension/zapper-ui.html
@@ -6,6 +6,7 @@
 <meta name="color-scheme" content="light dark">
 <title>uBO Lite Zapper</title>
 <link rel="stylesheet" href="/css/default.css">
+<link rel="stylesheet" href="/css/tool-overlay-ui.css">
 <link rel="stylesheet" href="/css/zapper-ui.css">
 </head>
 
@@ -21,7 +22,7 @@
         </svg>
     </div>
 </aside>
-<svg id="sea"><path d></path><path d></path></svg>
+<svg id="overlay"><path d></path><path d="M0 0"></path></svg>
 
 <script src="js/theme.js" type="module"></script>
 <script src="js/i18n.js" type="module"></script>
