[mv3] Remove unused CSS declarations

--- a/platform/mv3/extension/popup.html
+++ b/platform/mv3/extension/popup.html
@@ -13,7 +13,7 @@
 <title data-i18n="extName"></title>
 </head>
 
-<body class="loading" data-section="">
+<body class="loading">
 
 <div id="main">
     <div id="hostname"><span></span>&shy;<span></span></div>
