[mv3] Mind admin-forbidden features in popup panel

--- a/platform/mv3/extension/popup.html
+++ b/platform/mv3/extension/popup.html
@@ -28,7 +28,7 @@
     <!-- -------- -->
     <div id="filteringModeText"><label data-i18n="popupFilteringModeLabel">_</label><br><span>_</span><span></span></div>
     <!-- -------- -->
-    <hr class="needHTTP">
+    <hr class="localTools needHTTP">
     <div class="toolRibbon localTools needHTTP">
         <label>On this website</label>
         <span id="gotoZapper" class="tool enabled" tabindex="0">
@@ -53,7 +53,7 @@
         </span>
     </div>
     <!-- -------- -->
-    <hr>
+    <hr class="globalTools">
     <div class="toolRibbon globalTools">
         <span id="gotoDashboard" class="tool enabled" tabindex="0">
             <span class="fa-icon">cogs</span>
