[mv3] Mind long sentences in popup panel

--- a/platform/mv3/extension/popup.html
+++ b/platform/mv3/extension/popup.html
@@ -30,7 +30,7 @@
     <!-- -------- -->
     <hr class="localTools needHTTP">
     <div class="toolRibbon localTools needHTTP">
-        <label>On this website</label>
+        <label data-i18n="popupLocalToolsLabel"></label>
         <span id="gotoZapper" class="tool enabled" tabindex="0">
             <span class="fa-icon">bolt</span>
             <span data-i18n="zapperTipEnter">_</span>
