[mv3] Slightly rework popup panel layout

--- a/platform/mv3/extension/popup.html
+++ b/platform/mv3/extension/popup.html
@@ -28,8 +28,7 @@
     <!-- -------- -->
     <div id="filteringModeText"><label data-i18n="popupFilteringModeLabel">_</label><br><span>_</span><span></span></div>
     <!-- -------- -->
-    <hr class="localTools needHTTP">
-    <div class="toolRibbon localTools needHTTP">
+    <div class="toolMenu localTools needHTTP">
         <label data-i18n="popupLocalToolsLabel"></label>
         <span id="gotoZapper" class="tool enabled" tabindex="0">
             <span class="fa-icon">bolt</span>
@@ -47,18 +46,11 @@
             <span class="fa-icon">comment-alt</span>
             <span data-i18n="popupTipReport">_</span>
         </span>
-        <span id="gotoMatchedRules" class="tool" tabindex="0">
-            <span class="fa-icon">list-alt</span>
-            <span>Show matched rules</span>
-        </span>
     </div>
     <!-- -------- -->
-    <hr class="globalTools">
     <div class="toolRibbon globalTools">
-        <span id="gotoDashboard" class="tool enabled" tabindex="0">
-            <span class="fa-icon">cogs</span>
-            <span data-i18n="popupTipDashboard">_</span>
-        </span>
+        <span id="gotoMatchedRules" class="fa-icon tool" tabindex="0" title="Show matched rules">list-alt<span class="caption">Show matched rules</span></span>
+        <span id="gotoDashboard" class="fa-icon tool enabled" tabindex="0" data-i18n-title="popupTipDashboard">cogs<span class="caption" data-i18n="popupTipDashboard"></span></span>
     </div>
 </div>
 
