--- a/platform/mv3/extension/dashboard.html
+++ b/platform/mv3/extension/dashboard.html
@@ -31,6 +31,7 @@
         <!-- -------- -->
         <div data-pane-related="rulesets">
             <p><span id="listsOfBlockedHostsPrompt"></span> <span id="commit-spinner" class="fa-icon">spinner</span></p>
+            <p id="dnrError"></p>
             <p><input id="findInLists" type="search" spellcheck="false" placeholder="findListsPlaceholder" /></p>
         </div>
     </header>
