[mv3] Make new spinner in "Filter lists" pane more noticeable

--- a/platform/mv3/extension/dashboard.html
+++ b/platform/mv3/extension/dashboard.html
@@ -30,7 +30,7 @@
         </nav>
         <!-- -------- -->
         <div data-pane-related="rulesets">
-            <p><span id="listsOfBlockedHostsPrompt"></span> <span id="commit-spinner" class="fa-icon">spinner</span></p>
+            <p><span id="commit-spinner" class="fa-icon">spinner</span> <span id="listsOfBlockedHostsPrompt"></span></p>
             <p id="dnrError"></p>
             <p><input id="findInLists" type="search" spellcheck="false" placeholder="findListsPlaceholder" /></p>
         </div>
