--- a/platform/mv3/extension/dashboard.html
+++ b/platform/mv3/extension/dashboard.html
@@ -167,7 +167,7 @@
             </div>
             <hr>
             <details><summary data-i18n="supportS5H"></summary>
-            <pre style="user-select: all; -webkit-user-select: all;"></pre>
+            <pre style="user-select:all; -webkit-user-select:all; direction:ltr;"></pre>
             </details>
         </div>
     </section>
