[mv3] Add ability to reset to default settings

--- a/platform/mv3/extension/dashboard.html
+++ b/platform/mv3/extension/dashboard.html
@@ -103,6 +103,7 @@
             <p>
                 <button class="iconified dontshrink" type="button"><span class="fa-icon">download-alt</span><span data-i18n="backupButton">_</span><span class="hover"></span></button>
                 <button class="iconified dontshrink" type="button"><span class="fa-icon">upload-alt</span><span data-i18n="restoreButton">_</span><span class="hover"></span></button><input type="file" accept="application/json">
+                <button class="iconified dontshrink" type="button"><span class="fa-icon">undo</span><span data-i18n="resetToDefaultButton">_</span><span class="hover"></span></button><input type="file" accept="application/json">
             </p>
         </div>
     </section>
