[mv3] Add page-wide spinner when restoring/resetting settings

--- a/platform/mv3/extension/dashboard.html
+++ b/platform/mv3/extension/dashboard.html
@@ -173,6 +173,12 @@
         </div>
     </section>
     <!-- -------- -->
+    <section data-pane="busy">
+        <div>
+            <span class="fa-icon">spinner</span>
+        </div>
+    </section>
+    <!-- -------- -->
     <template id="listEntryLeaf">
         <div class="listEntry" data-role="leaf">
             <span class="detailbar">
