Fix i18n issue in strict-block page

--- a/src/document-blocked.html
+++ b/src/document-blocked.html
@@ -46,7 +46,7 @@
     <p class="why code">&nbsp;</p>
 </template>
 <template class="why-reason">
-    <details><summary><span data-i18n="docBlockedReasonLabel"></span> <span></span></summary>
+    <details><summary><span data-i18n="docblockedReasonLabel"></span> <span></span></summary>
     <p data-i18n="docblockedPrompt2">_</p>
     <p class="why code">&nbsp;</p>
     </details>
