[mv3] Show spinner when filtering mode change takes long
Related issue:
https://github.com/uBlockOrigin/uBOL-home/discussions/583

If the filtering mode change takes more than a second, a spinner
covering the whole popup panel will appear until the browser
API calls complete.

--- a/platform/mv3/extension/popup.html
+++ b/platform/mv3/extension/popup.html
@@ -15,7 +15,7 @@
 
 <body class="loading">
 
-<div id="main">
+<main>
     <div id="hostname"><span></span>&shy;<span></span></div>
     <!-- -------- -->
     <div class="filteringModeSlider">
@@ -52,7 +52,10 @@
         <span id="gotoMatchedRules" class="fa-icon tool" tabindex="0" title="Show matched rules">list-alt<span class="caption">Show matched rules</span></span>
         <span id="gotoDashboard" class="fa-icon tool enabled" tabindex="0" data-i18n-title="popupTipDashboard">cogs<span class="caption" data-i18n="popupTipDashboard"></span></span>
     </div>
-</div>
+</main>
+<aside>
+    <span class="fa-icon">spinner</span>
+</aside>
 
 <script src="js/theme.js" type="module"></script>
 <script src="js/fa-icons.js" type="module"></script>
