[mv3] Fine tune busy state of popup panel

--- a/platform/mv3/extension/popup.html
+++ b/platform/mv3/extension/popup.html
@@ -13,7 +13,7 @@
 <title data-i18n="extName"></title>
 </head>
 
-<body class="loading">
+<body class="loading busy">
 
 <main>
     <div id="hostname"><span></span>&shy;<span></span></div>
